--- a/portofolio_Mohamed-Darkaoui/oefening-home/portfolio.html
+++ b/portofolio_Mohamed-Darkaoui/oefening-home/portfolio.html
@@ -57,7 +57,7 @@
     </nav>
 <main class="container my-4"> 
   
-  <h1 class="col display-3 tekst-donkerblauw text-center">Mijn Projecten</h1>
+  <h1 class="col display-3 tekst-donkerblauw text-center"><strong>Mijn projecten</strong></h1>
 <hr>
   <div class="row"> 
     <div class="col-md-4"> 
