--- a/portofolio_Mohamed-Darkaoui/oefening-home/project3.html
+++ b/portofolio_Mohamed-Darkaoui/oefening-home/project3.html
@@ -127,7 +127,7 @@
     <article class="col-12 col-sm-6 col-md-4 text-center ">
         <div class="row my-4">
             <div class="col-9 text-center">
-                <a href="portofolio.html" class="btn donkerblauw text-blauwgrijs">Terug naar Projectoverzicht</a>
+                <a href="portfolio.html" class="btn donkerblauw text-blauwgrijs">Terug naar Projectoverzicht</a>
             </div>
         </div>
     </article>
