--- a/project1.html
+++ b/project1.html
@@ -84,7 +84,7 @@
         <div class="container">
         <h2 class="text-uppercase tekst-donkerblauw fs-5 fw-bolder pt-3">Project foto's</h2>
         </div>
-
+      <div class="row card-img">
         <article class="col-12 col-sm-6 col-md-4 shop-item image-container">
           <h2 class="text-uppercase tekst-donkerblauw fs-6 fw-bolder pt-3">Packet tracer</h2>
             <figure>
@@ -117,6 +117,7 @@
             </figure>
           </a>
         </article>
+      </div>
       </section>
       <hr>
       <div class="row skills-section">
