--- a/contact.html
+++ b/contact.html
@@ -132,7 +132,7 @@
                 </div>
               </div>
                   <div class="row my-4">
-    <button class="col-12 donkerblauw border-black rounded col-md-4 text-center" type="submit">verstuur</button>
+    <button class="col-12 donkerblauw text-black border-black rounded col-md-4 text-center" type="submit">verstuur</button>
     </div>
    </div>
 
